examples/custom_derive/tests/compile-fail/invalid_derive.rs
use custom_derive::HelloWorld;

#[test]
fn syntax_error() {
    #[derive("Name = Missing" =, HelloWorld)]
    struct MyStruct;

    assert_eq!(MyStruct::hello_world(), "Hello World");
}
